# lib

./: LICENSE  README.md  pyproject.toml  srm_results.csv
.github/workflows/: ci.yml
docs/: conf.py  index.rst
examples/: chart.py  greedy_av.py  netherlands_amsterdam_252_.pb  plurality_srm.py  poland_warszawa_2019_przyczolek-grochowski.pb  poland_warszawa_2020_ursynow.pb  srm_data.csv  srm_multipliers_data.csv  tests.py  tests_mul.py  us_stanford-dataset_cnycf-participatory-budgeting-project-2023_vote-approvals.pb
examples/big_examples/: France_Toulouse_big.pb  netherlands_amsterdam_166_.pb
examples/big_examples_call/: France_Toulouse_big.txt  amsterdam.txt  warszawa_2022.txt
examples/ex/: poland_warszawa_2022_rembertow.pb
examples/helper/: us_stanford-dataset_your-voice-your-choice-parks-and-streets-seattle-2017-district-7_vote-approvals.pb
examples/res/: {name}_round_analysis.html  {name}_summary.html
examples/small_examples/: France_Toulouse_2022_17_-_Mirail-Universite_Reynerie_Bellefontaine.pb  netherlands_assen_2024_.pb  worldwide_mechanical-turk_knapsack-6_.pb
examples/small_examples_call/: Toulouse_2022_Mirail_Universilte.txt  knapsack_6.txt  netherlands_assen.txt
examples/work_pictures/: amsterdam_srm_data.csv  toulouse_srm_data.csv  warszawa_rembertow_srm_data.csv
src/optimal_cost/: optimal_cost_mes.py  optimal_cost_phragmen.py
src/remove_approval/: perfect_approval_av.py
src/rules/: greedyAV.py
tests/: test_add_complement_mes.py  test_greedy_av.py  test_optimal_cost_av.py  test_perfect_approval_av.py  test_rivalry_reduction.py
(+12 files in other folders)
