[tool.poetry]
name = "pb-robustness-measures"   # IMPORTANT: Python package name must use hyphens
version = "0.1.0"
description = "This library provides implementations of robustness measures for participatory budgeting election instances."
authors = ["Kyrylo Iakymenko <yakimenko.kir@gmail.com>"]
readme = "README.md"
packages = [{ include = "pb_robustness_measures", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pabutools = "*"
matplotlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
black = "*"
flake8 = "*"
isort = "*"
sphinx = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

